First commit && set the card form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<header-component></header-component>
-<main-component></main-component>
+<organism-header></organism-header> 
+<view-home></view-home>
