--- a/src/app/organisms/organism-card-form/organism-card-form.component.html
+++ b/src/app/organisms/organism-card-form/organism-card-form.component.html
@@ -1,6 +1,8 @@
+<h2>{{ title }}</h2>
+
 <form class="form" [formGroup]="cardForm" (ngSubmit)="onSubmit()">
-  <label class="label">Day</label>
-  <input class="input" id="day" type="text" formControlName="day" />
+  <!-- <label class="label">Day</label>
+  <input class="input" id="day" type="text" formControlName="day" /> -->
 
   <label class="label">Time</label>
   <input class="input" id="time" type="text" formControlName="time" />
@@ -8,5 +10,7 @@
   <label class="label">Set</label>
   <input class="input" id="set" type="text" formControlName="set" />
 
-  <button class="btn" type="submit">Add</button>
+  <button class="btn" type="submit" [disabled]="cardForm.invalid">
+    {{ cta }}
+  </button>
 </form>
