--- a/src/app/organisms/organism-cards/organism-cards.component.html
+++ b/src/app/organisms/organism-cards/organism-cards.component.html
@@ -1,6 +1,19 @@
-<button type="button" (click)="getCards()">Get cards</button>
+<button type="button" (click)="onGetCards()">Get cards</button>
+<button type="button" (click)="onDeleteCards()">Delete cards</button>
 
-<molecule-cards
-        *ngFor="let card of cards"
-        [card]="card"
-></molecule-cards>
+<p *ngIf="!cards.length && !fetching">
+  There are no cards to display...please add one
+</p>
+
+<p *ngIf="fetching">Fetching...</p>
+
+<ng-container *ngIf="cards">
+  <molecule-cards
+    *ngFor="let card of cards; index as i; last as isLast"
+    [card]="card"
+    [index]="i"
+    [isLast]="isLast"
+    (deleteCard$)="deleteCard(i, isLast)"
+    (editCard$)="editCard(i)"
+  ></molecule-cards>
+</ng-container>
