--- a/src/app/organisms/organism-card-form/organism-card-form.component.html
+++ b/src/app/organisms/organism-card-form/organism-card-form.component.html
@@ -5,7 +5,13 @@
   <input class="input" id="day" type="text" formControlName="day" /> -->
 
   <label class="label">Time</label>
-  <input class="input" id="time" type="text" formControlName="time" />
+  <input
+    #inputTime
+    class="input"
+    id="time"
+    type="text"
+    formControlName="time"
+  />
 
   <label class="label">Set</label>
   <input class="input" id="set" type="text" formControlName="set" />
