--- a/src/app/organisms/organism-cards/organism-cards.component.scss
+++ b/src/app/organisms/organism-cards/organism-cards.component.scss
@@ -1,3 +1,9 @@
 :host {
-    flex: 1;
+  flex: 1;
+}
+
+.card-container {
+  display: grid;
+  grid-template: auto / repeat(6, 1fr);
+  grid-gap: 16px;
 }
