--- a/src/app/views/view-home/view-home.component.scss
+++ b/src/app/views/view-home/view-home.component.scss
@@ -1,3 +1,25 @@
+@import "../../../assets/styles/variables";
+
 :host {
-    display: flex;
+  display: flex;
+  flex-flow: column;
+  padding: 16px;
+}
+
+.form-container {
+  display: flex;
+  align-items: center;
+  padding: 0 0 16px;
+}
+
+.btn-add {
+  background: $endeavour;
+  border-radius: 50px;
+  width: 40px;
+  height: 40px;
+  transition: ease-in 0.2s;
+  cursor: pointer;
+  &:hover {
+    background: lighten($endeavour, 10%);
+  }
 }
