--- a/src/app/molecules/molecule-cards/molecule-cards.component.html
+++ b/src/app/molecules/molecule-cards/molecule-cards.component.html
@@ -6,7 +6,8 @@
   <p class="card__body--text">Set {{ card.set }}</p>
 </main>
 
-<button type="button" (click)="onManageCard()">
+<!-- Not ready yet -->
+<!-- <button type="button" (click)="onManageCard()">
   {{ setButtonManageContent() }}
 </button>
-<button type="button" (click)="onEditCard()">Edit</button>
+<button type="button" (click)="onEditCard()">Edit</button> -->
