--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
-@import './assets/styles/tools';
-@import './assets/styles/normalize';
-@import './assets/styles/base';
+@import "./assets/styles/tools";
+@import "./assets/styles/normalize";
+@import "./assets/styles/base";
+
+@import "./assets/styles/buttons";
