Added a lot of stuff

--- a/src/app/organisms/organism-cards/organism-cards.component.html
+++ b/src/app/organisms/organism-cards/organism-cards.component.html
@@ -5,21 +5,22 @@
   Delete cards
 </button>
 
-<p *ngIf="!cards.length && !fetching">
+<p *ngIf="!cards.length && !fetching && !error">
   There are no cards to display...please add one
 </p>
 
 <p *ngIf="fetching">Fetching...</p>
+<p *ngIf="error && !fetching">{{ error }}</p>
 
 <ng-container *ngIf="cards && !fetching">
   <div class="card-container">
-    <molecule-cards
+    <molecule-card
       *ngFor="let card of cards; index as i; last as isLast"
       [card]="card"
       [index]="i"
       [isLast]="isLast"
       (deleteCard$)="deleteCard(i, isLast)"
       (editCard$)="editCard(i)"
-    ></molecule-cards>
+    ></molecule-card>
   </div>
 </ng-container>
