--- a/src/app/organisms/organism-header/organism-header.component.scss
+++ b/src/app/organisms/organism-header/organism-header.component.scss
@@ -1,16 +1,14 @@
 @import "../../../assets/styles/variables";
 
 :host {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  // height: 60px;
-  background: $endeavour;
-  box-shadow: 0 0 1px 1px black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: $white;
+    box-shadow: 0 0 1px 1px black;
 }
 
 p {
-  color: $monza;
-  text-align: center;
+    color: $monza;
+    text-align: center;
 }
