--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,17 +4,45 @@
 
 @import "./assets/styles/buttons";
 
-
-.alert{
-  color: red;
-  background: rgba(255,0,0,.5);
-  padding: 20px;
-  text-align: center;
+.alert {
+    color: red;
+    background: rgba(255, 0, 0, 0.5);
+    padding: 20px;
+    text-align: center;
 }
 
-.success{
-  color: blue;
-  background: rgba(0,0,255,.5);
-  padding: 20px;
-  text-align: center;
+.success {
+    color: blue;
+    background: rgba(0, 0, 255, 0.5);
+    padding: 20px;
+    text-align: center;
+}
+
+
+.auth-form {
+    display: flex;
+    margin: auto;
+    flex-flow: column;
+    justify-content: center;
+    margin: auto;
+    width: 300px;
+}
+
+.form-group {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    padding: 15px 0;
+}
+
+.form-label {
+    margin: 0 0 5px;
+}
+
+.form-control {
+    padding: 5px;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid $black;
+    outline: none;
 }
