added lazy loading

--- a/src/app/organisms/organism-header/organism-header.component.html
+++ b/src/app/organisms/organism-header/organism-header.component.html
@@ -1,10 +1,10 @@
-<p>{{ userName }}</p>
+<!-- <p>{{ userName }}</p> -->
 
-<div class="header-nav">
+<!-- <div class="header-nav">
   <a class="btn-link" routerLink="/home" *ngIf="isAuthenticated">Home</a>
   <a class="btn-link" routerLink="/" *ngIf="!isAuthenticated">Auth</a>
   <a class="btn-link" routerLink="/detail">Detail</a>
-</div>
+</div> -->
 
 <div class="header-title">
   <p>{{ heading | uppercase }}</p>
