Added style and dropdown directive

--- a/src/app/molecules/molecule-card/molecule-card.component.html
+++ b/src/app/molecules/molecule-card/molecule-card.component.html
@@ -1,5 +1,7 @@
 <header class="card__header">
-  <p>Day {{ card.day }}</p>
+  <p class="card__header--content">
+    <span class="mobile-hidden">Day</span> {{ card.day }}
+  </p>
 </header>
 <main class="card__body">
   <p class="card__body--text">Time {{ card.time }}</p>
