--- a/src/app/molecules/molecule-card/molecule-card.component.scss
+++ b/src/app/molecules/molecule-card/molecule-card.component.scss
@@ -1,13 +1,42 @@
-@import "../../../assets/styles/variables";
+@import "../../../assets/styles/tools";
 
 :host {
-  width: 100%;
-  display: flex;
-  flex-flow: column;
-  background: $endeavour;
+    width: 100%;
+    display: flex;
+    border: 1px solid white;
+    border-radius: 4px;
+    align-items: center;
+    padding: 1rem;
+    @include screen-sm {
+        flex-flow: column;
+    }
 }
 
 .card__header {
-  color: $white;
-  background: $black;
+    color: $mineShaft;
+    // background: $black;
+    display: flex;
+    &--content {
+        border-radius: 40px;
+        height: 30px;
+        display: flex;
+        width: 30px;
+        justify-content: center;
+        align-items: center;
+        background: $grey;
+    }
+}
+
+.card__body {
+    display: flex;
+    flex: 1;
+    @include screen-sm {
+    }
+    &--text {
+        flex: 1;
+        padding: 0 1rem 0;
+        &:first-child {
+            border-right: 1px solid $grey;
+        }
+    }
 }
