--- a/src/app/organisms/organism-card-form/organism-card-form.component.html
+++ b/src/app/organisms/organism-card-form/organism-card-form.component.html
@@ -1,22 +1,28 @@
-<h2>{{ title }}</h2>
+<div class="modal">
+  <h2>{{ title }}</h2>
 
-<form class="form" [formGroup]="cardForm" (ngSubmit)="onSubmit()">
-  <!-- <label class="label">Day</label>
+  <form class="form" [formGroup]="cardForm" (ngSubmit)="onSubmit()">
+    <!-- <label class="label">Day</label>
   <input class="input" id="day" type="text" formControlName="day" /> -->
 
-  <label class="label">Time</label>
-  <input
-    #inputTime
-    class="input"
-    id="time"
-    type="text"
-    formControlName="time"
-  />
+    <label class="label">Time</label>
+    <input
+      #inputTime
+      class="input"
+      id="time"
+      type="text"
+      formControlName="time"
+    />
 
-  <label class="label">Set</label>
-  <input class="input" id="set" type="text" formControlName="set" />
+    <label class="label">Set</label>
+    <input class="input" id="set" type="text" formControlName="set" />
 
-  <button class="btn" type="submit" [disabled]="cardForm.invalid">
-    {{ cta }}
-  </button>
-</form>
+    <button class="btn" type="submit" [disabled]="cardForm.invalid">
+      {{ cta }}
+    </button>
+
+    <button class="btn" type="button" (click)="cancel()">
+      Cancel
+    </button>
+  </form>
+</div>
