--- a/src/app/organisms/organism-card-form/organism-card-form.component.scss
+++ b/src/app/organisms/organism-card-form/organism-card-form.component.scss
@@ -1,19 +1,37 @@
-@import "../../../assets/styles/variables";
+@import "../../../assets/styles/tools";
 
 :host {
-  flex: 1;
-  display: flex;
-  align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.75);
+    z-index: $zindex-modal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    background: $white;
+    width: 300px;
 }
 
 .form {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
 }
 
 .btn {
-  padding: 5px;
-  border-radius: 4px;
-  background: $endeavour;
-  color: $monza;
+    padding: 5px;
+    border-radius: 4px;
+    background: $endeavour;
+    color: $monza;
 }
