--- a/src/app/organisms/organism-header/organism-header.component.html
+++ b/src/app/organisms/organism-header/organism-header.component.html
@@ -11,6 +11,15 @@
   <span>{{ cardCount }} / 100</span>
 </div>
 
-<button *ngIf="isAuthenticated" (click)="onLogOut()" class="btn btn-delete">
-  Log out
-</button>
+<div class="dropdown__container" dropdown>
+  <button class="dropdown__trigger">burger</button>
+  <ul class="dropdown__menu">
+    <li
+      *ngIf="isAuthenticated"
+      (click)="onLogOut()"
+      class="dropdown__menu--item"
+    >
+      Log out
+    </li>
+  </ul>
+</div>
