--- a/src/app/organisms/organism-header/organism-header.component.scss
+++ b/src/app/organisms/organism-header/organism-header.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/styles/variables";
+@import "../../../assets/styles/tools";
 
 :host {
     display: flex;
@@ -6,10 +6,14 @@
     align-items: center;
     background: $white;
     box-shadow: 0 0 1px 1px black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 p {
-    color: $monza;
+    color: $color-primary;
     text-align: center;
     font-family: Base02;
 }
