--- a/src/app/views/view-home/view-home.component.html
+++ b/src/app/views/view-home/view-home.component.html
@@ -1,14 +1,12 @@
-<div class="form-container">
-  <button class="btn-add" (click)="onToggleCardForm()">+</button>
-
-  <organism-card-form
-    *ngIf="displayCardForm"
-    [isEditMode]="isEditMode"
-    [cardToEditIndex]="cardToEditIndex"
-    [title]="title"
-    [cta]="cta"
-    (editButtonEvent$)="editButtonEvent()"
-  ></organism-card-form>
-</div>
-
 <organism-cards></organism-cards>
+
+<button class="btn-add" (click)="onToggleCardForm()">+</button>
+
+<organism-card-form
+  *ngIf="displayCardForm"
+  [isEditMode]="isEditMode"
+  [cardToEditIndex]="cardToEditIndex"
+  [title]="title"
+  [cta]="cta"
+  (cancelButtonEvent$)="closeModal()"
+></organism-card-form>
