--- a/src/app/views/view-home/view-home.component.scss
+++ b/src/app/views/view-home/view-home.component.scss
@@ -1,25 +1,22 @@
-@import "../../../assets/styles/variables";
+@import "../../../assets/styles/tools";
 
 :host {
-  display: flex;
-  flex-flow: column;
-  padding: 16px;
-}
-
-.form-container {
-  display: flex;
-  align-items: center;
-  padding: 0 0 16px;
+    display: flex;
+    flex-flow: column;
+    padding: 3rem 1rem;
 }
 
 .btn-add {
-  background: $endeavour;
-  border-radius: 50px;
-  width: 40px;
-  height: 40px;
-  transition: ease-in 0.2s;
-  cursor: pointer;
-  &:hover {
-    background: lighten($endeavour, 10%);
-  }
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    background: $endeavour;
+    border-radius: 50px;
+    width: 40px;
+    height: 40px;
+    transition: ease-in 0.2s;
+    cursor: pointer;
+    &:hover {
+        background: lighten($endeavour, 10%);
+    }
 }
