--- a/src/app/views/view-auth/view-auth.component.scss
+++ b/src/app/views/view-auth/view-auth.component.scss
@@ -9,7 +9,7 @@
 }
 
 .title {
-    color: $color-ternary;
+    color: $color-primary;
     font-family: Base02;
     flex: 1;
     text-align: center;
