--- a/src/app/organisms/organism-cards/organism-cards.component.html
+++ b/src/app/organisms/organism-cards/organism-cards.component.html
@@ -1,9 +1,9 @@
-<button type="button" class="btn btn-fetch" (click)="onGetCards()">
+<!-- <button type="button" class="btn btn-fetch" (click)="onGetCards()">
   Get cards
 </button>
 <button type="button" class="btn btn-delete" (click)="onDeleteCards()">
   Delete cards
-</button>
+</button> -->
 
 <p *ngIf="!cards.length && !fetching && !error">
   There are no cards to display...please add one
