--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -104,6 +104,9 @@ textarea {
 
 .mobile-hidden {
     display: none !important;
+    @include screen-sm() {
+        display: block !important;
+    }
 }
 
 //////////
