--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -51,13 +51,14 @@ $base02-path: "/assets/fonts/base_02/Base02.ttf";
 
 $fontWeightLight: 300;
 $fontWeightBase: 400;
-$fontWeightBold: 500;
+$fontWeightBold: 600;
 $fontWeightBolder: 700;
 
 /////////////////
 // Z-INDEX
 /////////////////
-$zindex-modal: 50;
+$zindex-header: 50;
+$zindex-modal: 100;
 
 /////////////////
 // SCREEN SIZES
