--- a/src/app/molecules/molecule-card/molecule-card.component.scss
+++ b/src/app/molecules/molecule-card/molecule-card.component.scss
@@ -6,9 +6,10 @@
     border: 1px solid $color-ternary;
     border-radius: 4px;
     align-items: center;
-    padding: 1rem;
+    padding: 0.7rem 0 0.7rem 1rem;
     @include screen-sm {
         flex-flow: column;
+        padding: 1rem;
     }
 }
 
@@ -25,31 +26,55 @@
         justify-content: center;
         align-items: center;
         transform: rotate(-10deg);
-        &.unbrokenTitle {
-            color: $color-ternary;
+        &-day {
+            padding: 0 0.3rem 0 0;
         }
     }
 }
 
 .card__body {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex: 1;
     @include screen-sm {
+        flex-flow: column;
+        align-self: stretch;
     }
     &--text {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
         flex: 1;
-        padding: 0 1rem 0;
+        @include screen-sm {
+            justify-content: center;
+        }
         &:first-child {
             border-right: 1px solid $color-ternary;
+            @include screen-sm {
+                border: none;
+                justify-content: flex-end;
+            }
         }
         .unbroken {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             font-family: Base02;
             color: $color-ternary;
             transform: rotate(-10deg);
-            display: flex;
-            font-size: 1.6rem;
-            justify-content: center;
+            font-size: 1rem;
             border: none;
+            @include screen-sm {
+                font-size: 1.6rem;
+            }
+        }
+        &--variable {
+            color: $color-ternary;
+            font-weight: $fontWeightBold;
+            font-size: 1.2rem;
+            text-align: center;
+            padding: 0.3rem 0 0;
         }
     }
 }
