--- a/src/app/molecules/molecule-form-group/molecule-form-group.component.scss
+++ b/src/app/molecules/molecule-form-group/molecule-form-group.component.scss
@@ -1,4 +1,6 @@
-.form-group {
+@import "../../../assets/styles/tools";
+
+:host {
     position: relative;
     width: 100%;
     max-width: 280px;
@@ -46,7 +48,6 @@
             }
             .form-label-content {
                 color: $zombie;
-                -webkit-transform: translate3d(0, -1.4em, 0) scale3d(0.8, 0.8, 0.8);
                 transform: translate3d(0, -1.4em, 0) scale3d(0.8, 0.8, 0.8) translateZ(1px);
             }
         }
@@ -71,9 +72,7 @@
         display: block;
         padding: 0.9em 0 0.7em;
         font-size: 1.2em;
-        -webkit-transition: -webkit-transform 0.3s;
         transition: transform 0.3s;
-        -webkit-transform-origin: 0 50%;
         transform-origin: 0 50%;
         color: $color-primary;
     }
