--- a/src/app/organisms/organism-card-form/organism-card-form.component.html
+++ b/src/app/organisms/organism-card-form/organism-card-form.component.html
@@ -1,28 +1,42 @@
+<div class="modal-backdrop" (click)="cancel()"></div>
 <div class="modal">
-  <h2>{{ title }}</h2>
+  <h2 class="modal--title">{{ title }}</h2>
 
   <form class="form" [formGroup]="cardForm" (ngSubmit)="onSubmit()">
     <!-- <label class="label">Day</label>
   <input class="input" id="day" type="text" formControlName="day" /> -->
 
-    <label class="label">Time</label>
-    <input
-      #inputTime
-      class="input"
-      id="time"
-      type="text"
-      formControlName="time"
-    />
+    <div class="form-group">
+      <input
+        #inputTime
+        class="form-control"
+        id="time"
+        type="text"
+        formControlName="time"
+      />
+      <label class="form-label">
+        <span class="form-label-content">
+          Time
+        </span></label
+      >
+    </div>
+    <div class="form-group">
+      <input class="form-control" id="set" type="text" formControlName="set" />
+      <label class="form-label">
+        <span class="form-label-content">
+          Set
+        </span>
+      </label>
+    </div>
 
-    <label class="label">Set</label>
-    <input class="input" id="set" type="text" formControlName="set" />
+    <div class="btn--container">
+      <button class="btn" type="submit" [disabled]="cardForm.invalid">
+        {{ cta }}
+      </button>
 
-    <button class="btn" type="submit" [disabled]="cardForm.invalid">
-      {{ cta }}
-    </button>
-
-    <button class="btn" type="button" (click)="cancel()">
-      Cancel
-    </button>
+      <button class="btn" type="button" (click)="cancel()">
+        Cancel
+      </button>
+    </div>
   </form>
 </div>
