--- a/src/app/organisms/organism-card-form/organism-card-form.component.scss
+++ b/src/app/organisms/organism-card-form/organism-card-form.component.scss
@@ -6,20 +6,36 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.75);
     z-index: $zindex-modal;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.75);
+}
+
 .modal {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-flow: column;
-    background: $white;
+    background: $color-secondary;
     width: 300px;
+    border-radius: 4px;
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5);
+    padding: 1rem;
+    &--title {
+        color: $color-ternary;
+        font-family: Base02;
+    }
 }
 
 .form {
@@ -27,11 +43,19 @@
     align-items: center;
     justify-content: center;
     flex-flow: column;
+    width: 100%;
+    padding: 0 1rem;
 }
 
-.btn {
-    padding: 5px;
-    border-radius: 4px;
-    background: $endeavour;
-    color: $monza;
+.btn--container {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    .btn {
+        font-family: Base02;
+        color: $color-primary;
+        background: $color-ternary;
+        padding: 5px;
+        border-radius: 4px;
+    }
 }
