--- a/src/app/organisms/organism-cards/organism-cards.component.scss
+++ b/src/app/organisms/organism-cards/organism-cards.component.scss
@@ -8,6 +8,7 @@
     display: grid;
     grid-gap: 16px;
     @include screen-sm {
-        grid-template: auto / repeat(6, 1fr);
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-auto-rows: minmax(180px, 1fr);
     }
 }
