--- a/src/app/organisms/organism-header/organism-header.component.scss
+++ b/src/app/organisms/organism-header/organism-header.component.scss
@@ -2,20 +2,28 @@
 
 :host {
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    background: $white;
+    background: $color-primary;
     box-shadow: 0 0 1px 1px black;
     position: fixed;
     top: 0;
     left: 0;
+    z-index: $zindex-header;
     width: 100%;
+    padding: 1rem;
 }
 
-p {
-    color: $color-primary;
-    text-align: center;
-    font-family: Base02;
+.header__title {
+    flex: 1;
+    p {
+        color: $color-ternary;
+        text-align: center;
+        font-family: Base02;
+        font-size: 1.1rem;
+        @include screen-sm {
+            font-size: 1.8rem;
+        }
+    }
 }
 span {
     font-family: Base02;
