--- a/src/assets/styles/_dropdown.scss
+++ b/src/assets/styles/_dropdown.scss
@@ -1,6 +1,20 @@
 .dropdown__container {
     position: relative;
     &.open {
+        .dropdown__trigger {
+            span {
+                transform: rotate(45deg) translate(0px, -11px);
+                background: $color-secondary;
+                &:before {
+                    transform: rotate(-90deg) translate(-24px, 10px);
+                    background: $color-secondary;
+                }
+                &:after {
+                    opacity: 0;
+                    transform: rotate(0deg) scale(0.2, 0.2);
+                }
+            }
+        }
         .dropdown__menu {
             visibility: visible;
             height: inherit;
@@ -15,23 +29,56 @@
     padding: 0.5rem;
     border-radius: 4px;
     &:hover {
-        color: $zombie;
-        background: $lynch;
+        span {
+            background: $color-ternary;
+        }
+    }
+    span {
+        display: block;
+        width: 33px;
+        height: 4px;
+        margin: 5px 0;
+        position: relative;
+        background: $color-ternary;
+        border-radius: 3px;
+        z-index: 1;
+        transform-origin: 4px 0px;
+        transition: 0.2s ease-in;
+        &:before,
+        &:after {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 33px;
+            height: 4px;
+            background: $color-ternary;
+            border-radius: 3px;
+            z-index: 1;
+            transform-origin: 4px 0px;
+            transition: 0.2s ease-in;
+        }
+        &:before {
+            top: -0.6rem;
+        }
+        &:after {
+            bottom: -0.6rem;
+        }
     }
 }
 
 .dropdown__menu {
     position: absolute;
-    top: 30px;
-    left: 0;
-    min-width: 100px;
-    background: $white;
+    top: 50px;
+    right: 0;
+    min-width: 160px;
+    background: $color-ternary;
     transition: 0.4s;
     animation-timing-function: linear;
     transform-style: preserve-3d;
     visibility: hidden;
     height: 0;
     opacity: 0;
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5);
     &--item {
         transition: 0.2s;
         padding: 0.5rem;
