--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@
     flex-flow: column;
     justify-content: center;
     width: 300px;
+    padding: 0 0 3rem;
     @include screen-sm {
         padding: 0 0 100px;
     }
