--- a/src/app/views/view-404/view-404.component.html
+++ b/src/app/views/view-404/view-404.component.html
@@ -1,5 +1,5 @@
-<h1>Not found</h1>
+<p class="title">Page not found...</p>
 
-<button [routerLink]="['/']">Go to auth</button>
-
-<button (click)="navigate()">Go to home</button>
+<button class="btn btn-primary" type="button" (click)="navigate()">
+  Go home !
+</button>
