--- a/src/app/organisms/organism-header/organism-header.component.scss
+++ b/src/app/organisms/organism-header/organism-header.component.scss
@@ -5,7 +5,7 @@
     align-items: center;
     background: $color-primary;
     box-shadow: 0 0 1px 1px black;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     z-index: $zindex-header;
