--- a/src/app/views/view-home/view-home.component.scss
+++ b/src/app/views/view-home/view-home.component.scss
@@ -3,20 +3,20 @@
 :host {
     display: flex;
     flex-flow: column;
-    padding: 5rem 1rem;
+    padding: 1rem;
 }
 
 .btn-add {
     color: $color-ternary;
     position: fixed;
     font-weight: bold;
-    font-size: 1.3rem;
+    font-size: 2rem;
     bottom: 1rem;
     right: 1rem;
     background: $color-primary;
     border-radius: 50px;
-    width: 40px;
-    height: 40px;
+    width: 3rem;
+    height: 3rem;
     transition: ease-in 0.2s;
     cursor: pointer;
     &:hover {
