--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -41,7 +41,7 @@
     }
     &-delete {
         color: $white;
-        background: $monza;
+        background: $guardsmanRed;
     }
     &-confirm {
         flex: 1;
