--- a/src/assets/styles/_form.scss
+++ b/src/assets/styles/_form.scss
@@ -10,8 +10,8 @@
     // error state
     &.error {
         .form-control {
-            border-bottom: 1px solid $monza;
-            color: $monza;
+            border-bottom: 1px solid $guardsmanRed;
+            color: $guardsmanRed;
         }
     }
 }
