--- a/src/app/molecules/molecule-card/molecule-card.component.scss
+++ b/src/app/molecules/molecule-card/molecule-card.component.scss
@@ -7,10 +7,14 @@
     border-radius: 4px;
     align-items: center;
     padding: 0.7rem 0 0.7rem 1rem;
-    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.5);
+    transition: 0.2s;
+    cursor: pointer;
     @include screen-sm {
         flex-flow: column;
         padding: 1rem;
+    }
+    &:hover {
+        box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.5);
     }
 }
 
