--- a/src/app/organisms/organism-header/organism-header.component.scss
+++ b/src/app/organisms/organism-header/organism-header.component.scss
@@ -13,6 +13,13 @@
     padding: 1rem;
 }
 
+.header__card-count {
+    p {
+        font-family: Base02;
+        color: $color-secondary;
+    }
+}
+
 .header__title {
     flex: 1;
     p {
