Toggle delete cards options depending on the cards count

--- a/src/app/organisms/organism-header/organism-header.component.html
+++ b/src/app/organisms/organism-header/organism-header.component.html
@@ -34,7 +34,7 @@
       Fetch cards
     </li>
     <li
-      *ngIf="isAuthenticated"
+      *ngIf="isAuthenticated && hasCard"
       (click)="onDeleteCards()"
       class="dropdown__menu--item"
     >
