--- a/src/app/organisms/organism-card-form/organism-card-form.component.html
+++ b/src/app/organisms/organism-card-form/organism-card-form.component.html
@@ -28,6 +28,22 @@
         </span>
       </label>
     </div>
+    <div class="form-group form-group__textarea">
+      <textarea
+        #inputDescription
+        class="form-control form-control__textarea"
+        id="description"
+        type="textarea"
+        formControlName="description"
+        rows="1"
+      >
+      </textarea>
+      <label class="form-label">
+        <span class="form-label-content">
+          Description
+        </span></label
+      >
+    </div>
 
     <div class="btn--container">
       <button
