--- a/src/app/organisms/organism-card-form/organism-card-form.component.scss
+++ b/src/app/organisms/organism-card-form/organism-card-form.component.scss
@@ -51,6 +51,7 @@
     display: flex;
     width: 100%;
     justify-content: space-around;
+    margin: 20px auto 20px;
     .btn {
         padding: 5px;
         border-radius: 4px;
