--- a/src/assets/styles/_dropdown.scss
+++ b/src/assets/styles/_dropdown.scss
@@ -2,7 +2,7 @@
     position: relative;
     &.open {
         .dropdown__trigger {
-            span {
+            .burger {
                 transform: rotate(45deg) translate(0px, -11px);
                 background: $color-secondary;
                 &:before {
@@ -19,6 +19,10 @@
             visibility: visible;
             height: inherit;
             opacity: 1;
+            background: $color-ternary;
+            &--item {
+                font-size: inherit;
+            }
         }
     }
 }
@@ -29,11 +33,11 @@
     padding: 0.5rem;
     border-radius: 4px;
     &:hover {
-        span {
+        .burger {
             background: $color-ternary;
         }
     }
-    span {
+    .burger {
         display: block;
         width: 33px;
         height: 4px;
@@ -71,7 +75,7 @@
     top: 50px;
     right: 0;
     min-width: 160px;
-    background: $color-ternary;
+    background: transparent;
     transition: 0.4s;
     animation-timing-function: linear;
     transform-style: preserve-3d;
@@ -80,6 +84,7 @@
     opacity: 0;
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5);
     &--item {
+        font-size: 0;
         transition: 0.2s;
         padding: 0.5rem;
         border-bottom: 1px solid $mineShaft;
