Add animation to the routing

--- a/src/app/organisms/organism-cards/organism-cards.component.html
+++ b/src/app/organisms/organism-cards/organism-cards.component.html
@@ -12,7 +12,7 @@
       [card]="card"
       [index]="i"
       [isLast]="isLast"
-      (click)="navigate(card)"
+      (click)="navigate(card, i)"
     ></molecule-card>
   </div>
 </ng-container>
