--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<organism-header *ngIf="isLogged" ></organism-header>
-<router-outlet></router-outlet>
+<organism-header *ngIf="isLogged"></organism-header>
+<div class="router-container" [@triggerName]="prepareRoute(outlet)">
+  <router-outlet #outlet="outlet"></router-outlet>
+</div>
